# Esp32_System_Monitor_Display

./: .cproject  .project  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/wifi_manager/: CMakeLists.txt  WiFi.c
components/wifi_manager/html/: index.html
components/wifi_manager/include/: WiFi.h
main/: CMakeLists.txt  main.c
